--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,5 +1,6 @@
 <%= header %>
-
+<div class="root"></div>
+<!-- 
 <div class="container">
   <section>
     <h2 class="section-title">Popular</h2>
@@ -13,8 +14,5 @@
     <h2 class="section-title">Upcoming</h2>
     <div class="upcoming d-flex offset-mr"></div>
   </section>
-</div>
-
-<div class="popular"></div>
-
+</div> -->
 <%= footer %>
