--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,2 +1,8 @@
 $white: #fff;
 $black: #000;
+$sand: rgb(255, 251, 207);
+$navyblue: rgb(49, 118, 208);
+$tmdbDarkBlue: rgb(3,37,65);
+$mainLight: rgb(184,230,193);
+$mainMiddle: rgb(112,184,110);
+$mainDark: rgb(15,63,11);
