--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,13 +1,59 @@
-.header {
-  padding: 15px 0;
+@import "colors.scss";
 
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $mainMiddle;
+  width: 100%;
+  height: 10vh;
+  z-index: 10;
+  
   .inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 70vw;
   }
 
   .logo {
+    display: flex;
+    width: 20px;
+    height: 20px;
     margin: 0;
+    background-color: $mainDark;
+    color: $sand;
+    justify-content: center;
+    align-items: center;
+    font-size: unset;
+    padding: 5px;
+    cursor: pointer;
+  }
+
+  .search {
+    display: flex;
+    padding: 10px;
+    background-color: $mainMiddle;
+    color: $mainDark;
+    
+    #submitSearch {
+      background: $mainDark;
+      color: $sand;
+      border: none;
+      font-style: normal;
+      font-size: small;
+      cursor: pointer;
+    }
+    
+  }
+
+  .input {
+    font-size: 1rem;
+    background-color: $mainLight;
+    color: $mainDark;
+    border: 0;
   }
 }
