--- a/src/scss/movie.scss
+++ b/src/scss/movie.scss
@@ -7,25 +7,29 @@
   margin-bottom: 15px;
   position: relative;
   max-width: 50%;
+  justify-content: flex-start;
 
   .title {
     margin-bottom: 5px;
+    color: $black;
+    text-decoration: none;
   }
 
   .popularity {
-    margin-bottom: 5px;
+    display: flex;
+    width: 30px;
+    height: 30px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     top: 0;
     right: 0;
     background: $white;
-    padding: 5px;
     border: 1px solid $black;
-    display: flex;
-    width: 30px;
-    height: 30px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    border-radius: 50%;
+    margin-bottom: 5px;
+    padding: 5px;
 
     .rate {
       font-size: 10px;
@@ -34,6 +38,7 @@
 
   .poster {
     width: 100%;
+    padding: 10px;
     margin-bottom: 10px;
     transition: box-shadow .3s;
   }
